adding more details to the markdowns

--- a/sao_paulo_analysis_map.ipynb
+++ b/sao_paulo_analysis_map.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data collection"
+    "## Data\n",
+    "\n",
+    "We will first get the São Paulo boroughs by scraping a Wikipedia page. We will then associate the latitude and longitude coordinates for each borough using Nominatim. Later, we will explore the number of restaurants per borough for each price level using the Foursquare APIs"
    ]
   },
   {
@@ -585,7 +587,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can get the latitude and longitude of each borough usign Nominatim"
+    "We can get the latitude and longitude of each borough usign Nominatim\n",
+    "\n",
+    "We will later use the Foursquare APIs to retrieve the number of restaurants in each borough per price level"
    ]
   },
   {
@@ -1280,7 +1284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first explore one borough considering only restaurants on a fixed price level"
+    "Let's first explore one borough considering only restaurants on a fixed price level by calling the Foursquare API"
    ]
   },
   {
@@ -1476,7 +1480,7 @@
    "source": [
     "### Exploration for all price levels\n",
     "\n",
-    "Foursquare defines 4 price levels: from 1 to 4, 1 being the cheapest and 4 being the most expensive"
+    "Foursquare defines 4 price levels: from 1 to 4, 1 being the cheapest and 4 being the most expensive. We need to call the API for each price level"
    ]
   },
   {
